aks-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    name: todomanagemenet

---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: todo-server
  namespace: todo
  labels:
    app: todo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-server
  template:
    metadata:
      labels:
        app: todo-server
    spec:
      containers:
      - name: todo-server
        image: xxxxxx/image_name:version#
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080 

---
apiVersion: v1                # API version
kind: Service
metadata:
  name: todo-server-service
  namespace: todo
  labels:
    app: todo-server
spec:
  type: ClusterIP
  selector:
    app: todo-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-server-ingress
  namespace: todo
  labels:
    app: todo-server
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ROUTE"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - xxxxxxxx 
    secretName: tls-secret
  rules:
  - host: xxxxxxxxx 
    http:
      paths:
      - backend:
          serviceName: todo-server-service
          servicePort: 80
        path: /(.*)
